# portable-linux-in-a-box

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md
linux/: Makefile  build_kernel.sh  build_rootfs.sh
linux/overlay/: setup.sh
samples/: comfyui.json  dev-server.json  llama-chat.json
src/: compat.h  main.c
src/bridge/: bridge.h  fs_bridge.c  fs_bridge.h  http_bridge.c  http_bridge.h  json_escape.h  pipe_bridge.c  provision.c  provision.h  service.c  service.h  shell_escape.h
src/gui/: gui.h  webview_gui.c
src/linux/: backend.h  backend_types.h  detect.c  detect.h  native_backend.c  qemu_backend.c  qemu_backend_posix.c  stub_backend.c  tinyemu_backend.c  whpx_backend.c  wsl_backend.c
